--- a/resources/console_resources.qrc
+++ b/resources/console_resources.qrc
@@ -1,5 +1,6 @@
 <!DOCTYPE RCC><RCC version="1.0">
 <qresource>
     <file>qtquickcontrols2.conf</file>
+    <file>view.qml</file>
 </qresource>
 </RCC>
