--- a/resources/console_resources.qrc
+++ b/resources/console_resources.qrc
@@ -2,5 +2,6 @@
 <qresource>
     <file>qtquickcontrols2.conf</file>
     <file>view.qml</file>
+    <file>ContactModel.qml</file>
 </qresource>
 </RCC>
