--- a/resources/console_resources.qrc
+++ b/resources/console_resources.qrc
@@ -3,6 +3,7 @@
     <file>qtquickcontrols2.conf</file>
     <file>view.qml</file>
     <file>ContactModel.qml</file>
-    <file>TrackingTab/TrackingSignalsTab.qml</file>
+    <file>TrackingTab.qml</file>
+    <file>TrackingTabComponents/TrackingSignalsTab.qml</file>
 </qresource>
 </RCC>
