[CPP-41]Refactor velocity subtab with new paradigm fix bug in deque.

--- a/resources/console_resources.qrc
+++ b/resources/console_resources.qrc
@@ -3,6 +3,8 @@
     <file>qtquickcontrols2.conf</file>
     <file>view.qml</file>
     <file>ContactModel.qml</file>
+    <file>SolutionTab.qml</file>
+    <file>SolutionTabComponents/SolutionVelocityTab.qml</file>
     <file>TrackingTab.qml</file>
     <file>TrackingTabComponents/TrackingSignalsTab.qml</file>
 </qresource>
