--- a/resources/console_resources.qrc
+++ b/resources/console_resources.qrc
@@ -3,6 +3,7 @@
     <file>qtquickcontrols2.conf</file>
     <file>view.qml</file>
     <file>SolutionTab.qml</file>
+    <file>SolutionTabComponents/SolutionPositionTab.qml</file>
     <file>SolutionTabComponents/SolutionTable.qml</file>
     <file>SolutionTabComponents/SolutionVelocityTab.qml</file>
     <file>TrackingTab.qml</file>
