[CPP-39][CPP-40] Solution Tab - Table and Position Plot (#29)
* [CPP-39]Solutions Table and possibly Position Plot.

* Making progress.

* Merged in main.

* Keep working

* Have a very cruddy position plot showing.

* Have a working table just need to add scrollbar.

* Buttons are working.

* Respond to review requests.

* Adding autocancellation action.

* Respond to review requests.

* Respond to review requests.

--- a/resources/console_resources.qrc
+++ b/resources/console_resources.qrc
@@ -2,8 +2,9 @@
 <qresource>
     <file>qtquickcontrols2.conf</file>
     <file>view.qml</file>
-    <file>ContactModel.qml</file>
     <file>SolutionTab.qml</file>
+    <file>SolutionTabComponents/SolutionPositionTab.qml</file>
+    <file>SolutionTabComponents/SolutionTable.qml</file>
     <file>SolutionTabComponents/SolutionVelocityTab.qml</file>
     <file>TrackingTab.qml</file>
     <file>TrackingTabComponents/TrackingSignalsTab.qml</file>
