--- a/resources/console_resources.qrc
+++ b/resources/console_resources.qrc
@@ -2,6 +2,9 @@
 <qresource>
     <file>qtquickcontrols2.conf</file>
     <file>view.qml</file>
+    <file>BottomNavBar.qml</file>
+    <file>Constants.qml</file>
+    <file>qmldir</file>
     <file>SolutionTab.qml</file>
     <file>SolutionTabComponents/SolutionPositionTab.qml</file>
     <file>SolutionTabComponents/SolutionTable.qml</file>
