Refactored client send and have constants working almost done fixing connectrequest deconstruction.

--- a/resources/console_resources.qrc
+++ b/resources/console_resources.qrc
@@ -2,6 +2,7 @@
 <qresource>
     <file>qtquickcontrols2.conf</file>
     <file>view.qml</file>
+    <file>PlayPauseButton.qml</file>
     <file>BottomNavBar.qml</file>
     <file>Constants.qml</file>
     <file>qmldir</file>
