--- a/resources/console_resources.qrc
+++ b/resources/console_resources.qrc
@@ -3,8 +3,8 @@
     <file>qtquickcontrols2.conf</file>
     <file>view.qml</file>
     <file>BottomNavBar.qml</file>
-    <file>Constants.qml</file>
-    <file>qmldir</file>
+    <file>Constants/Constants.qml</file>
+    <file>Constants/qmldir</file>
     <file>SolutionTab.qml</file>
     <file>SolutionTabComponents/SolutionPositionTab.qml</file>
     <file>SolutionTabComponents/SolutionTable.qml</file>
