--- a/resources/console_resources.qrc
+++ b/resources/console_resources.qrc
@@ -2,9 +2,10 @@
 <qresource>
     <file>qtquickcontrols2.conf</file>
     <file>view.qml</file>
-    <file>BottomNavBar.qml</file>
+    <file>NavBar.qml</file>
     <file>LogPanel.qml</file>
     <file>Constants/Constants.qml</file>
+    <file>Constants/Globals.qml</file>
     <file>Constants/qmldir</file>
     <file>SolutionTab.qml</file>
     <file>SolutionTabComponents/SolutionPositionTab.qml</file>
