--- a/resources/console_resources.qrc
+++ b/resources/console_resources.qrc
@@ -4,6 +4,7 @@
     <file>view.qml</file>
     <file>NavBar.qml</file>
     <file>LogPanel.qml</file>
+    <file>LoggingBar.qml</file>
     <file>StatusBar.qml</file>
     <file>Constants/Constants.qml</file>
     <file>Constants/Globals.qml</file>
@@ -20,5 +21,10 @@
     <file>ObservationTabComponents/ObservationTable.qml</file>
     <file>images/iconic/arrows_blue.png</file>
     <file>images/iconic/arrows_grey.png</file>
+    <file>images/fontawesome/play-solid.svg</file>
+    <file>images/fontawesome/power-off-solid.svg</file>
+    <file>images/fontawesome/pause-solid.svg</file>
+    <file>images/fontawesome/folder-open-regular.svg</file>
+    <file>images/fontawesome/folder-solid.svg</file>
 </qresource>
 </RCC>
