--- a/resources/console_resources.qrc
+++ b/resources/console_resources.qrc
@@ -10,6 +10,8 @@
     <file>Constants/Globals.qml</file>
     <file>Constants/qmldir</file>
     <file>Constants/utils.js</file>
+    <file>AdvancedTab.qml</file>
+    <file>AdvancedTabComponents/AdvancedInsTab.qml</file>
     <file>SolutionTab.qml</file>
     <file>SolutionTabComponents/SolutionPositionTab.qml</file>
     <file>SolutionTabComponents/SolutionTable.qml</file>
