--- a/resources/console_resources.qrc
+++ b/resources/console_resources.qrc
@@ -12,6 +12,7 @@
     <file>Constants/utils.js</file>
     <file>AdvancedTab.qml</file>
     <file>AdvancedTabComponents/AdvancedInsTab.qml</file>
+    <file>AdvancedTabComponents/FusionEngineStatusBar.qml</file>
     <file>SolutionTab.qml</file>
     <file>SolutionTabComponents/SolutionPositionTab.qml</file>
     <file>SolutionTabComponents/SolutionTable.qml</file>
