--- a/resources/console_resources.qrc
+++ b/resources/console_resources.qrc
@@ -13,6 +13,9 @@
     <file>AdvancedTab.qml</file>
     <file>AdvancedTabComponents/AdvancedInsTab.qml</file>
     <file>AdvancedTabComponents/FusionEngineStatusBar.qml</file>
+    <file>AdvancedTabComponents/UnknownStatus.qml</file>
+    <file>AdvancedTabComponents/WarningStatus.qml</file>
+    <file>AdvancedTabComponents/OkStatus.qml</file>
     <file>SolutionTab.qml</file>
     <file>SolutionTabComponents/SolutionPositionTab.qml</file>
     <file>SolutionTabComponents/SolutionTable.qml</file>
@@ -29,5 +32,8 @@
     <file>images/fontawesome/pause-solid.svg</file>
     <file>images/fontawesome/folder-open-regular.svg</file>
     <file>images/fontawesome/folder-solid.svg</file>
+    <file>images/fontawesome/square-solid.svg</file>
+    <file>images/fontawesome/exclamation-triangle-solid.svg</file>
+    <file>images/fontawesome/circle-solid.svg</file>
 </qresource>
 </RCC>
