Add Roboto font
See https://bugreports.qt.io/browse/QTBUG-83155

--- a/resources/console_resources.qrc
+++ b/resources/console_resources.qrc
@@ -1,6 +1,8 @@
 <!DOCTYPE RCC><RCC version="1.0">
 <qresource>
     <file>qtquickcontrols2.conf</file>
+    <file>fonts/Roboto-Regular.ttf</file>
+    <file>fonts/Roboto-Bold.ttf</file>
     <file>view.qml</file>
     <file>NavBar.qml</file>
     <file>LogPanel.qml</file>
