--- a/resources/console_resources.qrc
+++ b/resources/console_resources.qrc
@@ -19,6 +19,10 @@
     <file>AdvancedTabComponents/UnknownStatus.qml</file>
     <file>AdvancedTabComponents/WarningStatus.qml</file>
     <file>AdvancedTabComponents/OkStatus.qml</file>
+    <file>BaselineTab.qml</file>
+    <file>BaselineTabComponents/BaselinePlot.qml</file>
+    <file>BaselineTabComponents/BaselinePlotLoop.js</file>
+    <file>BaselineTabComponents/BaselineTable.qml</file>
     <file>SolutionTab.qml</file>
     <file>SolutionTabComponents/SolutionPositionTab.qml</file>
     <file>SolutionTabComponents/SolutionTable.qml</file>
