FFTMonitor Bin and AdvSpectrumAnalyzerSubtab[CPP-52][CPP-268]

--- a/resources/console_resources.qrc
+++ b/resources/console_resources.qrc
@@ -16,6 +16,8 @@
     <file>AdvancedTabComponents/AdvancedInsTab.qml</file>
     <file>AdvancedTabComponents/FusionStatusFlags.qml</file>
     <file>AdvancedTabComponents/AdvancedMagnetometerTab.qml</file>
+    <file>AdvancedTabComponents/AdvancedSpectrumAnalyzerTab.qml</file>
+    <file>AdvancedTabComponents/AdvancedSpectrumAnalyzerTabChannelBar.qml</file>
     <file>AdvancedTabComponents/UnknownStatus.qml</file>
     <file>AdvancedTabComponents/WarningStatus.qml</file>
     <file>AdvancedTabComponents/OkStatus.qml</file>
