--- a/resources/console_resources.qrc
+++ b/resources/console_resources.qrc
@@ -1,9 +1,14 @@
 <!DOCTYPE RCC><RCC version="1.0">
 <qresource>
     <file>qtquickcontrols2.conf</file>
+    <file>fonts/Roboto-LICENSE.txt</file>
     <file>fonts/Roboto-Regular.ttf</file>
     <file>fonts/Roboto-Bold.ttf</file>
     <file>view.qml</file>
+    <file>MainDrawer.qml</file>
+    <file>MainDialogView.qml</file>
+    <file>MainTabs.qml</file>
+    <file>SideNavBar.qml</file>
     <file>NavBar.qml</file>
     <file>LogPanel.qml</file>
     <file>LoggingBar.qml</file>
@@ -34,8 +39,11 @@
     <file>ObservationTab.qml</file>
     <file>ObservationTabComponents/observation_tab.js</file>
     <file>ObservationTabComponents/ObservationTable.qml</file>
+    <file>MainDrawerComponents/LicensesPopup.qml</file>
     <file>images/iconic/arrows_blue.png</file>
     <file>images/iconic/arrows_grey.png</file>
+    <file>images/fontawesome/LICENSE.txt</file>
+    <file>images/fontawesome/bars-solid.svg</file>
     <file>images/fontawesome/play-solid.svg</file>
     <file>images/fontawesome/power-off-solid.svg</file>
     <file>images/fontawesome/pause-solid.svg</file>
@@ -44,5 +52,12 @@
     <file>images/fontawesome/square-solid.svg</file>
     <file>images/fontawesome/exclamation-triangle-solid.svg</file>
     <file>images/fontawesome/circle-solid.svg</file>
+    <file>images/fontawesome/satellite-solid.svg</file>
+    <file>images/fontawesome/map-marker-alt-solid.svg</file>
+    <file>images/fontawesome/braille-solid.svg</file>
+    <file>images/fontawesome/table-solid.svg</file>
+    <file>images/fontawesome/cogs-solid.svg</file>
+    <file>images/fontawesome/chevron-circle-up-solid.svg</file>
+    <file>images/fontawesome/lock-solid.svg</file>
 </qresource>
 </RCC>
