--- a/resources/console_resources.qrc
+++ b/resources/console_resources.qrc
@@ -42,6 +42,14 @@
     <file>ObservationTabComponents/observation_tab.js</file>
     <file>ObservationTabComponents/ObservationTable.qml</file>
     <file>MainDrawerComponents/LicensesPopup.qml</file>
+    <file>UpdateTab.qml</file>
+    <file>UpdateTabComponents/FirmwareVersionAndDownloadLabels.qml</file>
+    <file>UpdateTabComponents/FirmwareRevision.qml</file>
+    <file>UpdateTabComponents/SelectLocalFile.qml</file>
+    <file>UpdateTabComponents/SelectFirmwareDownloadDirectory.qml</file>
+    <file>UpdateTabComponents/FileIOSelectLocalFileAndDestPath.qml</file>
+    <file>UpdateTabComponents/FirmwareDownload.qml</file>
+    <file>UpdateTabComponents/FirmwareVersion.qml</file>
     <file>images/iconic/arrows_blue.png</file>
     <file>images/iconic/arrows_grey.png</file>
     <file>images/fontawesome/LICENSE.txt</file>
