--- a/resources/console_resources.qrc
+++ b/resources/console_resources.qrc
@@ -18,6 +18,11 @@
     <file>Constants/qmldir</file>
     <file>Constants/utils.js</file>
     <file>AdvancedTab.qml</file>
+    <file>AdvancedTabComponents/AdvancedSystemMonitorTab.qml</file>
+    <file>AdvancedTabComponents/ThreadStateTable.qml</file>
+    <file>AdvancedTabComponents/DeviceMonitor.qml</file>
+    <file>AdvancedTabComponents/MetricsMonitor.qml</file>
+    <file>AdvancedTabComponents/ObservationConnectionMonitor.qml</file>
     <file>AdvancedTabComponents/AdvancedInsTab.qml</file>
     <file>AdvancedTabComponents/FusionStatusFlags.qml</file>
     <file>AdvancedTabComponents/AdvancedMagnetometerTab.qml</file>
