New column heading item, header redesigned in Observation tab
* This introduces a new column heading item that can be used in any
  tables in the console. It provides sorting and reordering features
  if the underlying model supports it (implements QSortFilterProxyModel,
  plus a reorderColumn method).
  These features need to be manually enabled.
* Using the new heading item in ObservationTable to improve the look and
  feel of the observation tab.

--- a/resources/console_resources.qrc
+++ b/resources/console_resources.qrc
@@ -80,5 +80,6 @@
     <file>images/fontawesome/file-export.svg</file>
     <file>images/fontawesome/file-import.svg</file>
     <file>images/fontawesome/exclamation-triangle.svg</file>
+    <file>TableComponents/SortableColumnHeading.qml</file>
 </qresource>
 </RCC>
