Make cell delegate reusable, use in ObservationTable
* This moves the table cell delegate defined for ObservationTable to a
  new QML file in the TableComponents directory, to make
  ObservationTable more readable, and to make it available to other
  tables within the application.

* Make flicking behave a little more normally - stopping at bounds.

--- a/resources/console_resources.qrc
+++ b/resources/console_resources.qrc
@@ -79,5 +79,6 @@
     <file>images/fontawesome/file-import.svg</file>
     <file>images/fontawesome/exclamation-triangle.svg</file>
     <file>TableComponents/SortableColumnHeading.qml</file>
+    <file>TableComponents/TableCellDelegate.qml</file>
 </qresource>
 </RCC>
