--- a/resources/console_resources.qrc
+++ b/resources/console_resources.qrc
@@ -81,5 +81,6 @@
     <file>images/fontawesome/exclamation-triangle.svg</file>
     <file>TableComponents/SortableColumnHeading.qml</file>
     <file>TableComponents/TableCellDelegate.qml</file>
+    <file>BaseComponents/SwiftGroupBox.qml</file>
 </qresource>
 </RCC>
