ObservationTable: Use Groupbox, decrease empty space
* Use a GroupBox for "Local" and "Remote" labeling.
* This adds a new directory for base components, that are Swift-styled
  versions of basic QML components. The first such component is
  GroupBox, which decreases the amount of empty space, and allows for
  the background rectangle to be customized - color, border color, and
  border size.
* Adds a line bounding the bottom of the TableView. Allows the user to
  more clearly see the end of the visible portion of the table, even
  when the rows visible do not end at a whole row.

--- a/resources/console_resources.qrc
+++ b/resources/console_resources.qrc
@@ -80,5 +80,6 @@
     <file>images/fontawesome/exclamation-triangle.svg</file>
     <file>TableComponents/SortableColumnHeading.qml</file>
     <file>TableComponents/TableCellDelegate.qml</file>
+    <file>BaseComponents/SwiftGroupBox.qml</file>
 </qresource>
 </RCC>
