--- a/resources/console_resources.qrc
+++ b/resources/console_resources.qrc
@@ -24,6 +24,9 @@
     <file>AdvancedTabComponents/MetricsMonitor.qml</file>
     <file>AdvancedTabComponents/ObservationConnectionMonitor.qml</file>
     <file>AdvancedTabComponents/AdvancedInsTab.qml</file>
+    <file>AdvancedTabComponents/AdvancedNetworkingTab.qml</file>
+    <file>AdvancedTabComponents/NetworkInfo.qml</file>
+    <file>AdvancedTabComponents/MessageBroadcaster.qml</file>
     <file>AdvancedTabComponents/FusionStatusFlags.qml</file>
     <file>AdvancedTabComponents/AdvancedMagnetometerTab.qml</file>
     <file>AdvancedTabComponents/AdvancedSpectrumAnalyzerTab.qml</file>
