--- a/resources/console_resources.qrc
+++ b/resources/console_resources.qrc
@@ -64,7 +64,10 @@
     <file>images/fontawesome/bars-solid.svg</file>
     <file>images/fontawesome/play-solid.svg</file>
     <file>images/fontawesome/power-off-solid.svg</file>
-    <file>images/fontawesome/pause-solid.svg</file>
+    <file alias="pause.svg">images/iconic/media-pause.svg</file>
+    <file alias="center-on.svg">images/fontawesome/crosshairs-solid.svg</file>
+    <file alias="clear.svg">images/fontawesome/eraser-solid.svg</file>
+    <file alias="zoom-all.svg">images/fontawesome/expand-solid.svg</file>
     <file>images/fontawesome/folder-open-regular.svg</file>
     <file>images/fontawesome/folder-solid.svg</file>
     <file>images/fontawesome/square-solid.svg</file>
