[CPP-297] Add INS settings confirmation popup
Adds a popup dialog that asks the user to confirm that the INS mode
should be changed, showing any necessary IMU settings changes if needed.
Accepting this dialog will configure the IMU as needed, save the
settings then reset the device.

--- a/resources/console_resources.qrc
+++ b/resources/console_resources.qrc
@@ -38,6 +38,7 @@
     <file>BaselineTabComponents/BaselinePlot.qml</file>
     <file>SettingsTab.qml</file>
     <file>SettingsTabComponents/SettingsTable.qml</file>
+    <file>SettingsTabComponents/InsSettingsPopup.qml</file>
     <file>SolutionPlotCommon/SolutionPlotLoop.js</file>
     <file>BaselineTabComponents/BaselineTable.qml</file>
     <file>SolutionTab.qml</file>
