--- a/resources/console_resources.qrc
+++ b/resources/console_resources.qrc
@@ -18,6 +18,7 @@
     <file>Constants/qmldir</file>
     <file>Constants/utils.js</file>
     <file>AdvancedTab.qml</file>
+    <file>ConnectionScreen.qml</file>
     <file>AdvancedTabComponents/AdvancedSystemMonitorTab.qml</file>
     <file>AdvancedTabComponents/ThreadStateTable.qml</file>
     <file>AdvancedTabComponents/DeviceMonitor.qml</file>
@@ -69,6 +70,7 @@
     <file alias="center-on.svg">images/fontawesome/crosshairs-solid.svg</file>
     <file alias="clear.svg">images/fontawesome/eraser-solid.svg</file>
     <file alias="zoom-all.svg">images/fontawesome/expand-solid.svg</file>
+    <file>images/icon.png</file>
     <file>images/fontawesome/folder-open-regular.svg</file>
     <file>images/fontawesome/folder-solid.svg</file>
     <file>images/fontawesome/square-solid.svg</file>
