make tracking signal checkboxes smaller

--- a/resources/console_resources.qrc
+++ b/resources/console_resources.qrc
@@ -92,6 +92,7 @@
     <file>images/fontawesome/exclamation-triangle.svg</file>
     <file>TableComponents/SortableColumnHeading.qml</file>
     <file>TableComponents/TableCellDelegate.qml</file>
+    <file>BaseComponents/SmallCheckBox.qml</file>
     <file>BaseComponents/SwiftGroupBox.qml</file>
 </qresource>
 </RCC>
