Make TrackingSignalTab's legend generic/reusable
* This moves the legend created for the TrackingSignalTab to a separate
  file for use elsewhere.
* Properties that were specific to the TrackingSignalTab were defaulted
  or parameterized, customized where they are used in the
  TrackingSignalTab

--- a/resources/console_resources.qrc
+++ b/resources/console_resources.qrc
@@ -98,5 +98,6 @@
     <file>TableComponents/TableCellDelegate.qml</file>
     <file>BaseComponents/SmallCheckBox.qml</file>
     <file>BaseComponents/SwiftGroupBox.qml</file>
+    <file>ChartLegend.qml</file>
 </qresource>
 </RCC>
