--- a/resources/console_resources.qrc
+++ b/resources/console_resources.qrc
@@ -94,6 +94,7 @@
     <file>images/fontawesome/file-import.svg</file>
     <file>images/fontawesome/exclamation-triangle.svg</file>
     <file>images/icon.png</file>
+    <file>images/icon.ico</file>
     <file>TableComponents/SortableColumnHeading.qml</file>
     <file>TableComponents/TableCellDelegate.qml</file>
     <file>BaseComponents/SmallCheckBox.qml</file>
