Refactored SideBar without TabBar
* Introduce a whole new SideBar implementation that does not use TabBar.
* SideNavButton customized button type added, allows for much more
  customization to the look of the SideNavBar buttons.
* ListView used to display the buttons, allows more freedom to customize
  look and feel over TabBar, and is designed to be used vertically.
* Adopt the new design guidelines as is shown in mockups in slack:
  https://snav.slack.com/archives/C02DG3HAHT8/p1632876609129100
* Fix current index of MainTab corresponding to selected SideNavBar tab.
  (was 1s based, now 0 based)

--- a/resources/console_resources.qrc
+++ b/resources/console_resources.qrc
@@ -8,6 +8,7 @@
     <file>MainDialogView.qml</file>
     <file>MainTabs.qml</file>
     <file>SideNavBar.qml</file>
+    <file>SideNavBarComponents/SideNavButton.qml</file>
     <file>LogPanel.qml</file>
     <file>LoggingBar.qml</file>
     <file>StatusBar.qml</file>
