SideNavBar and TabBar Swift Orange styling (#242)
This provides a new implementation of the SideNavBar that conforms to the SwiftNav orange UI guidelines.
The guidelines that were worked off of are described in:
https://snav.slack.com/archives/C02DG3HAHT8/p1632876609129100 (older one)
https://snav.slack.com/archives/C020JLK6PK8/p1637094700036500 (which I was made aware of today, Nov 16)

* Add new 'SwiftNav' style

* This creates a new Qt Quick Controls 2 style which I have named
  "SwiftNav". It is selected in the qtquickcontrols2.conf file,
  and is based on the Material style, with a fallback to the material
  style in cases where a control is not defined in the style.

* Initially I added a TabBar and TabButton control. The TabBar and
  TabButton controls are styled similar to what is desired in the new
  orange styling that SwiftNav folks desired.

* Note that there are a lot of changes in the colors of the TabButton
  elements from the old keithel-qt/orange-styling branch. This is to
  more closely blend in with the connection button on the bottom, and it
  looks nicer.

* TabBar and TabButton orange styling

* This achieves 90% of the new orange styling guidelines for TabBars and
  TabButtons used in the console.
* Current problems exist in the sidebar outlining. This isn't quite
  right, and I think the outline should not be drawn in the style
  control in this case, and instead drawn by the code using it.

cherry-pick notes: Significant changes from the version of this commit
in the old keithel-qt/orange-styling.

* Remove checkbox from resources

* Use TabBar's standard contentItem, expose orientation

* Expose the orientation setting of the ListView content item of
  TabBar, allowing a user to specify an orientation for the TabBar.
* Remove TabBar contentItem override in SideNavBar, use new orientation
  property of TabBar.

* Refactored SideBar without TabBar

* Introduce a whole new SideBar implementation that 

--- a/resources/console_resources.qrc
+++ b/resources/console_resources.qrc
@@ -8,6 +8,7 @@
     <file>MainDialogView.qml</file>
     <file>MainTabs.qml</file>
     <file>SideNavBar.qml</file>
+    <file>SideNavBarComponents/SideNavButton.qml</file>
     <file>LogPanel.qml</file>
     <file>LoggingBar.qml</file>
     <file>StatusBar.qml</file>
@@ -100,5 +101,9 @@
     <file>BaseComponents/SmallCheckBox.qml</file>
     <file>BaseComponents/SwiftGroupBox.qml</file>
     <file>ChartLegend.qml</file>
+    <file>Theme/qmldir</file>
+    <file>Theme/Theme.qml</file>
+    <file alias="SwiftNav/TabBar.qml">styles/SwiftNav/TabBar.qml</file>
+    <file alias="SwiftNav/TabButton.qml">styles/SwiftNav/TabButton.qml</file>
 </qresource>
 </RCC>
