--- a/resources/console_resources.qrc
+++ b/resources/console_resources.qrc
@@ -103,5 +103,6 @@
     <file>ChartLegend.qml</file>
     <file alias="SwiftNav/TabBar.qml">styles/SwiftNav/TabBar.qml</file>
     <file alias="SwiftNav/TabButton.qml">styles/SwiftNav/TabButton.qml</file>
+    <file>Tab.qml</file>
 </qresource>
 </RCC>
