Make global sub-tab bar at the view.qml level
* Add a "TabInfoBar" that contains the sub-tabs of any views that have
  sub-tabs, instead of the tab bar being within those tabs.
* This is to comply to new "orange" SwiftNav design guidelines provided
  by Colin Maisonpierre.
* Communication of what tabs are to be shown is passed up through
  bound properties to the toplevel view, and then down into the new
  TabInfoBar.
* Similarly, communication of the currently selected tab is passed from
  TabInfoBar up to the toplevel view, and then down into the MainTabs
  and to the specific main tab through bound properties.

* A side-effect of this is that when the connection dialog is showing
  for the first time, no tab is selected at all - which is actually more
  accurate than the prior behavior, where the Tracking tab button was
  toggled on, but the connection screen was showing.
  Now, once the connection screen is dismissed, if the current index of
  the SideNavBar indicates nothing is selected (-1), then it will toggle
  the SideNavBar button with index Globals.initialMainTabIndex
  (presently Tracking tab).

--- a/resources/console_resources.qrc
+++ b/resources/console_resources.qrc
@@ -103,6 +103,7 @@
     <file>ChartLegend.qml</file>
     <file alias="SwiftNav/TabBar.qml">styles/SwiftNav/TabBar.qml</file>
     <file alias="SwiftNav/TabButton.qml">styles/SwiftNav/TabButton.qml</file>
-    <file>Tab.qml</file>
+    <file>MainTab.qml</file>
+    <file>TabInfoBar.qml</file>
 </qresource>
 </RCC>
