Add Tab name placeholder to TabInfoBar, style bar
* This adds the tab name to the left of the subtab tab names in the
  TabInfoBar. For now it's just a placeholder with static "TRACKING" as
  the text. Next commits will make that reflect the current main tab
  that is showing.
* This tweaks the TabBar styling, removing the border feature, and
  instead having the user of the TabBar define any borders.
* In TabInfoBar, we add vertical separators between each tab button in a
  different way than in other places - we just manually place them
  outside of the TabBar itself, layered ontop.
* Top and bottom separator lines are defined in the TabInfoBar for
  visual appeal and to separate the navigation bar from the main tab
  contents.

--- a/resources/console_resources.qrc
+++ b/resources/console_resources.qrc
@@ -4,6 +4,7 @@
     <file>fonts/Roboto-LICENSE.txt</file>
     <file>fonts/Roboto-Regular.ttf</file>
     <file>fonts/Roboto-Bold.ttf</file>
+    <file>fonts/RobotoCondensed-Regular.ttf</file>
     <file>view.qml</file>
     <file>MainDialogView.qml</file>
     <file>MainTabs.qml</file>
