Add placeholders for branding on TabInfoBar right
* This adds placeholders for the branding informational items on the
  right of the TabInfoBar.

--- a/resources/console_resources.qrc
+++ b/resources/console_resources.qrc
@@ -72,6 +72,7 @@
     <file>images/fontawesome/bars-solid.svg</file>
     <file>images/fontawesome/play-solid.svg</file>
     <file>images/fontawesome/power-off-solid.svg</file>
+    <file>images/fontawesome/info-circle-solid.svg</file>
     <file alias="pause.svg">images/iconic/media-pause.svg</file>
     <file alias="center-on.svg">images/fontawesome/crosshairs-solid.svg</file>
     <file alias="clear.svg">images/fontawesome/eraser-solid.svg</file>
