--- a/resources/console_resources.qrc
+++ b/resources/console_resources.qrc
@@ -79,6 +79,7 @@
     <file alias="zoom-all.svg">images/fontawesome/expand-solid.svg</file>
     <file>images/ConnectionIcon.svg</file>
     <file>images/LogoBackground.jpg</file>
+    <file>images/swiftLogoWide.svg</file>
     <file>images/fontawesome/folder-open-regular.svg</file>
     <file>images/fontawesome/folder-solid.svg</file>
     <file>images/fontawesome/square-solid.svg</file>
@@ -105,6 +106,7 @@
     <file>ChartLegend.qml</file>
     <file alias="SwiftNav/TabBar.qml">styles/SwiftNav/TabBar.qml</file>
     <file alias="SwiftNav/TabButton.qml">styles/SwiftNav/TabButton.qml</file>
+    <file alias="SwiftNav/RoundButton.qml">styles/SwiftNav/RoundButton.qml</file>
     <file>MainTab.qml</file>
     <file>TabInfoBar.qml</file>
 </qresource>
