--- a/resources/console_resources.qrc
+++ b/resources/console_resources.qrc
@@ -4,6 +4,7 @@
     <file>fonts/Roboto-LICENSE.txt</file>
     <file>fonts/Roboto-Regular.ttf</file>
     <file>fonts/Roboto-Bold.ttf</file>
+    <file>fonts/RobotoCondensed-Regular.ttf</file>
     <file>view.qml</file>
     <file>MainDialogView.qml</file>
     <file>MainTabs.qml</file>
@@ -71,12 +72,14 @@
     <file>images/fontawesome/bars-solid.svg</file>
     <file>images/fontawesome/play-solid.svg</file>
     <file>images/fontawesome/power-off-solid.svg</file>
+    <file>images/fontawesome/info-circle-solid.svg</file>
     <file alias="pause.svg">images/iconic/media-pause.svg</file>
     <file alias="center-on.svg">images/fontawesome/crosshairs-solid.svg</file>
     <file alias="clear.svg">images/fontawesome/eraser-solid.svg</file>
     <file alias="zoom-all.svg">images/fontawesome/expand-solid.svg</file>
     <file>images/ConnectionIcon.svg</file>
     <file>images/LogoBackground.jpg</file>
+    <file>images/swiftLogoWide.svg</file>
     <file>images/fontawesome/folder-open-regular.svg</file>
     <file>images/fontawesome/folder-solid.svg</file>
     <file>images/fontawesome/square-solid.svg</file>
@@ -101,9 +104,10 @@
     <file>BaseComponents/SmallCheckBox.qml</file>
     <file>BaseComponents/SwiftGroupBox.qml</file>
     <file>ChartLegend.qml</file>
-    <file>Theme/qmldir</file>
-    <file>Theme/Theme.qml</file>
     <file alias="SwiftNav/TabBar.qml">styles/SwiftNav/TabBar.qml</file>
     <file alias="SwiftNav/TabButton.qml">styles/SwiftNav/TabButton.qml</file>
+    <file alias="SwiftNav/RoundButton.qml">styles/SwiftNav/RoundButton.qml</file>
+    <file>MainTab.qml</file>
+    <file>TabInfoBar.qml</file>
 </qresource>
 </RCC>
