--- a/resources/console_resources.qrc
+++ b/resources/console_resources.qrc
@@ -101,6 +101,7 @@
     <file>images/icon.ico</file>
     <file>TableComponents/SortableColumnHeading.qml</file>
     <file>TableComponents/TableCellDelegate.qml</file>
+    <file>TableComponents/SwiftTableView.qml</file>
     <file>BaseComponents/SmallCheckBox.qml</file>
     <file>BaseComponents/SwiftGroupBox.qml</file>
     <file>ChartLegend.qml</file>
