--- a/resources/console_resources.qrc
+++ b/resources/console_resources.qrc
@@ -97,16 +97,19 @@
     <file>images/fontawesome/file-export.svg</file>
     <file>images/fontawesome/file-import.svg</file>
     <file>images/fontawesome/exclamation-triangle.svg</file>
+    <file>images/fontawesome/folder-regular.svg</file>
     <file>images/icon.png</file>
     <file>images/icon.ico</file>
     <file>TableComponents/SortableColumnHeading.qml</file>
     <file>TableComponents/TableCellDelegate.qml</file>
     <file>BaseComponents/SmallCheckBox.qml</file>
     <file>BaseComponents/SwiftGroupBox.qml</file>
+    <file>BaseComponents/SwiftButton.qml</file>
     <file>ChartLegend.qml</file>
     <file alias="SwiftNav/TabBar.qml">styles/SwiftNav/TabBar.qml</file>
     <file alias="SwiftNav/TabButton.qml">styles/SwiftNav/TabButton.qml</file>
     <file alias="SwiftNav/RoundButton.qml">styles/SwiftNav/RoundButton.qml</file>
+    <file alias="SwiftNav/ComboBox.qml">styles/SwiftNav/ComboBox.qml</file>
     <file>MainTab.qml</file>
     <file>TabInfoBar.qml</file>
 </qresource>
