Style the LoggingBar per new style guidelines

--- a/resources/console_resources.qrc
+++ b/resources/console_resources.qrc
@@ -5,6 +5,11 @@
     <file>fonts/Roboto-Regular.ttf</file>
     <file>fonts/Roboto-Bold.ttf</file>
     <file>fonts/RobotoCondensed-Regular.ttf</file>
+    <file>fonts/RobotoCondensed-Italic.ttf</file>
+    <file>fonts/RobotoCondensed-Bold.ttf</file>
+    <file>fonts/RobotoCondensed-BoldItalic.ttf</file>
+    <file>fonts/RobotoCondensed-Light.ttf</file>
+    <file>fonts/RobotoCondensed-LightItalic.ttf</file>
     <file>view.qml</file>
     <file>MainDialogView.qml</file>
     <file>MainTabs.qml</file>
