Add PositionLoopAnimation, apply to open+close buttons
* This creates the reusable animation "PositionLoopAnimation" that can
  animate the y position of an item within it's parent by moving it
  either down or up within the parent, and then "looping" it around to
  the other side, and animating it back to it's original position.
* This depends on the parent height, so presently it's designed to be
  used on the "y" position of the target item. With a small change, it
  should be able to be made to work with x position as well.
* Use the PositionLoopAnimation in the TabInfoBar open "button" -
  replacing it's existing animation (for which PositionLoopAnimation is
  based)
* Use the PositionLoopAnimation in the TabInfoBar open button in
  view.qml to make it known to the user what it does.

--- a/resources/console_resources.qrc
+++ b/resources/console_resources.qrc
@@ -117,5 +117,6 @@
     <file alias="SwiftNav/ComboBox.qml">styles/SwiftNav/ComboBox.qml</file>
     <file>MainTab.qml</file>
     <file>TabInfoBar.qml</file>
+    <file>PositionLoopAnimation.qml</file>
 </qresource>
 </RCC>
