Keithel qt/orange styling logging bar, Signals, TabInfoBar, file reading (#266)
* Styled the logging bar so it looks pretty much like what the mockups are showing
* Improvements to TrackingSignals bar (checkboxes showing correctly, tweaked fonts to be more correct)
* Touchups to TabInfoBar to now use the 'light' variant of Roboto Condensed, now that I figured out how to use it.
* Using Roboto Condensed app-wide now as the default fontFamily
* Added a section in Constants.qml for the TabInfoBar, moved things like the setting of fonts and some colors, path to the info icon, and text like the app name in there.
* Added a visual close "button" to the TabInfoBar, so that the user has a visual indication that the bar can be closed, making room for larger charts and tables. Added a little animation to this "button" to make it more clear what it does.
* Added the same sort of animation to the TabInfoBar open button, and made it a little smaller (less wide), as it seemed too big.
* Disable the TabInfoBar auto-hide logic, per Waz and Colin's request. This can be re-enabled simply by setting the autoHide property of the TabInfoBar instance in view.qml to true.
* Turn off the "Recording" label in the LoggingBar per Waz's request - as it was confusing (is this a descriptor for what the button does, or is it indicating the state of recording now? -- it was the former) and redundant.
* Replace XHR QML file reading with a FileIO Python object registered with QML. Used it for the two licenses that are shown in the about dialog. This eliminates an insecure warning.
* Fixed the iCCP incorrect sRGB profile warning by removing the iCCP chunk from icon.png using ImageMagick mogrify tool.
* Per Waz' request, added a separator bar above the Connect button so it looks just like the other SideNavBar buttons. Also corrected the height so it matches the rest of the buttons.

--- a/resources/console_resources.qrc
+++ b/resources/console_resources.qrc
@@ -5,6 +5,11 @@
     <file>fonts/Roboto-Regular.ttf</file>
     <file>fonts/Roboto-Bold.ttf</file>
     <file>fonts/RobotoCondensed-Regular.ttf</file>
+    <file>fonts/RobotoCondensed-Italic.ttf</file>
+    <file>fonts/RobotoCondensed-Bold.ttf</file>
+    <file>fonts/RobotoCondensed-BoldItalic.ttf</file>
+    <file>fonts/RobotoCondensed-Light.ttf</file>
+    <file>fonts/RobotoCondensed-LightItalic.ttf</file>
     <file>view.qml</file>
     <file>MainDialogView.qml</file>
     <file>MainTabs.qml</file>
@@ -97,17 +102,21 @@
     <file>images/fontawesome/file-export.svg</file>
     <file>images/fontawesome/file-import.svg</file>
     <file>images/fontawesome/exclamation-triangle.svg</file>
+    <file>images/fontawesome/folder-regular.svg</file>
     <file>images/icon.png</file>
     <file>images/icon.ico</file>
     <file>TableComponents/SortableColumnHeading.qml</file>
     <file>TableComponents/TableCellDelegate.qml</file>
     <file>BaseComponents/SmallCheckBox.qml</file>
     <file>BaseComponents/SwiftGroupBox.qml</file>
+    <file>BaseComponents/SwiftButton.qml</file>
     <file>ChartLegend.qml</file>
     <file alias="SwiftNav/TabBar.qml">styles/SwiftNav/TabBar.qml</file>
     <file alias="SwiftNav/TabButton.qml">styles/SwiftNav/TabButton.qml</file>
     <file alias="SwiftNav/RoundButton.qml">styles/SwiftNav/RoundButton.qml</file>
+    <file alias="SwiftNav/ComboBox.qml">styles/SwiftNav/ComboBox.qml</file>
     <file>MainTab.qml</file>
     <file>TabInfoBar.qml</file>
+    <file>PositionLoopAnimation.qml</file>
 </qresource>
 </RCC>
