--- a/resources/console_resources.qrc
+++ b/resources/console_resources.qrc
@@ -108,6 +108,7 @@
     <file>images/icon.ico</file>
     <file>TableComponents/SortableColumnHeading.qml</file>
     <file>TableComponents/TableCellDelegate.qml</file>
+    <file>TableComponents/SwiftTableView.qml</file>
     <file>BaseComponents/SmallCheckBox.qml</file>
     <file>BaseComponents/SwiftGroupBox.qml</file>
     <file>BaseComponents/SwiftButton.qml</file>
