Override Controls 2 Label for explicit font size
This overrides Qt Quick Control 2's Label so an explicit font size can
be set to it, as it did not seem to be honoring the qtquickcontrols
default font size.

This also sets the default font in the qtquickcontrols2.conf file to
Roboto Condensed to match the setting we made in Constants.fontFamily.

--- a/resources/console_resources.qrc
+++ b/resources/console_resources.qrc
@@ -117,6 +117,7 @@
     <file alias="SwiftNav/TabButton.qml">styles/SwiftNav/TabButton.qml</file>
     <file alias="SwiftNav/RoundButton.qml">styles/SwiftNav/RoundButton.qml</file>
     <file alias="SwiftNav/ComboBox.qml">styles/SwiftNav/ComboBox.qml</file>
+    <file alias="SwiftNav/Label.qml">styles/SwiftNav/Label.qml</file>
     <file>MainTab.qml</file>
     <file>TabInfoBar.qml</file>
     <file>PositionLoopAnimation.qml</file>
