Make SwiftAxis qml components
* Make SwiftCategoryAxis and SwiftValueAxis to set property values
  common to all axes across the application. Making maintenance of the
  font family, size, and colors all from a single place.
  This greatly simplifies the creation of an axis in a new component,
  and is much cleaner.

--- a/resources/console_resources.qrc
+++ b/resources/console_resources.qrc
@@ -110,6 +110,8 @@
     <file>BaseComponents/SmallCheckBox.qml</file>
     <file>BaseComponents/SwiftGroupBox.qml</file>
     <file>BaseComponents/SwiftButton.qml</file>
+    <file>BaseComponents/SwiftValueAxis.qml</file>
+    <file>BaseComponents/SwiftCategoryAxis.qml</file>
     <file>ChartLegend.qml</file>
     <file alias="SwiftNav/TabBar.qml">styles/SwiftNav/TabBar.qml</file>
     <file alias="SwiftNav/TabButton.qml">styles/SwiftNav/TabButton.qml</file>
