--- a/resources/console_resources.qrc
+++ b/resources/console_resources.qrc
@@ -118,6 +118,7 @@
     <file alias="SwiftNav/RoundButton.qml">styles/SwiftNav/RoundButton.qml</file>
     <file alias="SwiftNav/ComboBox.qml">styles/SwiftNav/ComboBox.qml</file>
     <file alias="SwiftNav/Label.qml">styles/SwiftNav/Label.qml</file>
+    <file alias="SwiftNav/Button.qml">styles/SwiftNav/Button.qml</file>
     <file>MainTab.qml</file>
     <file>TabInfoBar.qml</file>
     <file>PositionLoopAnimation.qml</file>
