Orange Styling drop 3 - License page, status bar, and mainPanel margins (#289)
* Remove annoying line in About licenses page

The Material TextArea type has a line towards the bottom of the
component, so instead just use the Quick TextEdit type instead.

* Override Controls 2 Label for explicit font size

This overrides Qt Quick Control 2's Label so an explicit font size can
be set to it, as it did not seem to be honoring the qtquickcontrols
default font size.

This also sets the default font in the qtquickcontrols2.conf file to
Roboto Condensed to match the setting we made in Constants.fontFamily.

* Change Label override to be Material's Label

* New StatusBar implementation

* Use of Repeater for key value pair display.
* Remove references to parent item, replace with defined toplevel
  properties that view.qml uses to bind to the appropriate other items
  in the view. This fixes encapsulation, and allows the StatusBar to be
  used elsewhere if ever needed.
* Remove fixed nature to the layouting - allow the Labels to define the
  height of the StatusBar (along with the label's top and bottom
  padding). Similar for width - allow the items in the rowLayout to
  define the implicit width of the statusBar.

* Improve loggingBar+Panel preferred height handling

* Move where the loggingBar and logPanel preferred heights into the
  Constants.loggingBar and Constants.logPanel sections.
* Add preferredHeight property on LoggingBar and LogPanel that hold the
  constants for them defined in Constants.qml.

* Move the StatusBar to where it used to be used

* Remove StatusBar from the ApplicationWindow footer, as when it is
  there it will span across the entirety of the application window -
  which we actually don't want.

* Make the Constants.margins effective

* Prior to this commit, Constants.margins had no effect.
* Move Constants.margins to a new mainTabs section of Constants, name it
  horizontalMargins, as it was only used

--- a/resources/console_resources.qrc
+++ b/resources/console_resources.qrc
@@ -70,8 +70,6 @@
     <file>UpdateTabComponents/FileIOSelectLocalFileAndDestPath.qml</file>
     <file>UpdateTabComponents/FirmwareDownload.qml</file>
     <file>UpdateTabComponents/FirmwareVersion.qml</file>
-    <file>images/iconic/arrows_blue.png</file>
-    <file>images/iconic/arrows_grey.png</file>
     <file>images/iconic/play.svg</file>
     <file>images/fontawesome/LICENSE.txt</file>
     <file>images/fontawesome/bars-solid.svg</file>
@@ -112,11 +110,15 @@
     <file>BaseComponents/SmallCheckBox.qml</file>
     <file>BaseComponents/SwiftGroupBox.qml</file>
     <file>BaseComponents/SwiftButton.qml</file>
+    <file>BaseComponents/SwiftValueAxis.qml</file>
+    <file>BaseComponents/SwiftCategoryAxis.qml</file>
     <file>ChartLegend.qml</file>
     <file alias="SwiftNav/TabBar.qml">styles/SwiftNav/TabBar.qml</file>
     <file alias="SwiftNav/TabButton.qml">styles/SwiftNav/TabButton.qml</file>
     <file alias="SwiftNav/RoundButton.qml">styles/SwiftNav/RoundButton.qml</file>
     <file alias="SwiftNav/ComboBox.qml">styles/SwiftNav/ComboBox.qml</file>
+    <file alias="SwiftNav/Label.qml">styles/SwiftNav/Label.qml</file>
+    <file alias="SwiftNav/Button.qml">styles/SwiftNav/Button.qml</file>
     <file>MainTab.qml</file>
     <file>TabInfoBar.qml</file>
     <file>PositionLoopAnimation.qml</file>
