Clean up Update tab UI[CPP-499]

--- a/resources/console_resources.qrc
+++ b/resources/console_resources.qrc
@@ -112,6 +112,8 @@
     <file>BaseComponents/SwiftButton.qml</file>
     <file>BaseComponents/SwiftValueAxis.qml</file>
     <file>BaseComponents/SwiftCategoryAxis.qml</file>
+    <file>BaseComponents/SwiftTextbox.qml</file>
+    <file>BaseComponents/SwiftTextInput.qml</file>
     <file>ChartLegend.qml</file>
     <file alias="SwiftNav/TabBar.qml">styles/SwiftNav/TabBar.qml</file>
     <file alias="SwiftNav/TabButton.qml">styles/SwiftNav/TabButton.qml</file>
